fixed gap bug

--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -35,7 +35,7 @@
 
 .contact-bottom {
     display: grid;
-    gap: 40px;
+    gap: 60px;
     grid-template-columns: 1fr 1fr;
 }
 
